css/islandora-person.css
/**
 * This is the styling for the person objects pages.
 */

/* Important! Over-rides to hide sidebar's on entity pages. */

body.islandora-entity .sidebar {
	display: none !important;
}

body.islandora-entity #content, body.islandora-entity #content {
	width: 100% !important;
}

/* Shared */

.col-left, .col-right {
	font-size: 90%;
}
.col-left h3, .col-right h3, .islandora-object-content h3 {
	font-size: 10pt;
	font-weight: bold;
	border-bottom: 1px solid #E5E5E5;
	padding-bottom: 0.25em;
}
.col-left ul, .col-right ul {
	padding: 0 0 0.25em 1.5em !important;
}
.col-left ul li, .col-right ul li, .islandora-object-content ul li {
	padding-top: 0.65em !important;
}

/* Left column */
.col-left {
	float: left;
	width: 29%;
}

/* Right column */
.col-right {
 	float: right;
 	width: 18%;	
}

/* Metadata */

.islandora-object-metadata .fieldset-wrapper {
	padding: 0;
	margin: 0;
}
.islandora-object-metadata fieldset {
	border: 0 none;
	top: 0;
	padding: 0;
	margin: 1em 0 1.5em;
}
.islandora-object-metadata legend {
	display: none;
}
.islandora-object-metadata dt, .islandora-object-metadata dd {
	font-weight: normal;
	padding-top: 0.75em;
	padding-bottom: 0.65em;
}

/* Main content */

.islandora-object-content {
	float: left;
	width: 49%;	
	margin: 0 1% 0 2%;
}
.islandora-object-content h1 {
	margin-top: 0;
}
.islandora-object-content h3 {
	margin-top: 2em;
}

/* Recent Citations */
.islandora-object-content ul {
	padding: 0 0 0.25em 2em !important;
}

